Usage of factory method is recommended.
Thanks to "ranjan1423".

Closes #165.